[gd_scene load_steps=2 format=3 uid="uid://ekqwt5fvn4wb"]

[ext_resource type="Script" uid="uid://je48o2s3jbg7" path="res://pause_menu.gd" id="1_rrvs5"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rrvs5")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="MainMenu" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="PanelContainer/VBoxContainer/MainMenu"]
dialog_text = "Are you sure you want to go back to the main menu?"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="confirmed" from="PanelContainer/VBoxContainer/MainMenu/ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
